objects/Cancelled_UW_Document__c.object
<CustomObject>
    <fields>
        <fullName>Stip_Name__c</fullName>
        <label>Stip Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bank Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer - Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Document</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UW_Documents__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UW Documents</label>
        <referenceTo>Cloufi__UW_Document__c</referenceTo>
        <relationshipLabel>Cancelled UW Documents</relationshipLabel>
        <relationshipName>Cancelled_UW_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cancelled UW Document</label>
    <nameField>
        <label>Cancelled UW Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cancelled UW Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>